add bump version script

--- a/package.json
+++ b/package.json
@@ -1,26 +1,1 @@
-{
-  "name": "tkejms",
-  "description":"TKE JMS message dispatcher",
-  "version": "0.1.0",
-  "dependencies": {
-    "async":"*",
-    "xml2js": "*",
-    "winston": "0.7.3",
-    "stomp-client": "0.5.0"
-  },
-  "devDependencies": {
-    "grunt-contrib-watch": "latest",
-    "grunt-nodemon": "0.2.0",
-    "grunt-concurrent": "latest",
-    "supertest": "0.8.2",
-    "should": "2.1.1",
-    "turbo-test-runner": "0.3.3",
-    "proxyquire": "0.5.3",
-    "grunt-shell": "0.6.4",
-    "istanbul": "0.2.7",
-    "grunt-env": "~0.4.1",
-    "grunt-mocha-test": "^0.10.2",
-    "mocha": "*",
-    "grunt-mocha-istanbul": "^1.4.1"
-  }
-}
+{"name":"tkejms","description":"TKE JMS message dispatcher","version":"0.1.0","dependencies":{"async":"*","xml2js":"*","winston":"0.7.3","stomp-client":"0.5.0"},"devDependencies":{"grunt-contrib-watch":"latest","grunt-nodemon":"0.2.0","grunt-concurrent":"latest","supertest":"0.8.2","should":"2.1.1","turbo-test-runner":"0.3.3","proxyquire":"0.5.3","grunt-shell":"0.6.4","istanbul":"0.2.7","grunt-env":"~0.4.1","grunt-mocha-test":"^0.10.2","mocha":"*","grunt-mocha-istanbul":"^1.4.1"}}
