--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "async": "*",
         "xml2js": "*",
         "winston": "0.7.3",
-        "stomp-client": "0.5.0"
+        "stomp-client":"git+https://github.com/stuyboy/node-stomp-client.git"
     },
     "devDependencies": {
         "grunt-contrib-watch": "latest",
